--- a/lab4.html
+++ b/lab4.html
@@ -7,7 +7,7 @@
 <style>
   /* Layout */
   .boxes {
-    list-style: decimal inside;       /* keeps the ordered numbering */
+    list-style: decimal inside;       
     display: flex;
     gap: 16px;
     padding: 0;
@@ -24,12 +24,11 @@
     box-shadow: 0 6px 16px rgba(0,0,0,0.12);
   }
 
-  /* Different fill colors for each box */
-  .boxes li:nth-child(1) { background: #2563eb; } /* First – blue */
-  .boxes li:nth-child(2) { background: #10b981; } /* Second – green */
-  .boxes li:nth-child(3) { background: #f59e0b; } /* Third – amber */
+  
+  .boxes li:nth-child(1) { background: #2563eb; } 
+  .boxes li:nth-child(2) { background: #10b981; } 
+  .boxes li:nth-child(3) { background: #f59e0b; } 
 
-  /* Optional: nicer numbering bubble */
   .boxes li::marker { font-weight: 700; }
 </style>
 </head>
@@ -41,3 +40,4 @@
   </ol>
 </body>
 </html>
+
